gwangju/2-2/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-svc
  namespace: app
spec:
  type: NodePort
  selector:
    app: rollouts
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
